kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: nginx-namespace
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
  type: ClusterIP
