kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-dns-resolver-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <your-domain.com> # Replace with your domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-dns-resolver-service
                port:
                  number: 80
